<resources>
    <string name="app_name">Piazza</string>
    <string name="title_activity_piazza_home">Piazza - Control Horari</string>
    <string name="menu_inici">Inici</string>
    <string name="menu_treballadors">Treballador</string>
    <string name="menu_historial">Historial</string>
    <string name="emptyTime">--:--</string>
    <string name="slash">-</string>
    <string name="email">Email</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="title_inici">Validar</string>
    <string name="title_treballadors">Treballadors</string>
    <string name="title_administrar">Administrar</string>
    <string name="title_historial">Historial</string>
    <string name="title_introduir_hores">Inici</string>
    <string name="title_perfil">Perfil</string>
    <string name="nom_empleat">Nom empleat</string>
    <string name="hores_mensuals">Hores mensuals</string>
    <string name="sou">Sou</string>
    <string name="login">Iniciar sessió</string>
    <string name="logout">Tancar sessió</string>
    <string name="alta">Donar d\'alta</string>
    <string name="iniciar">INICIAR</string>
    <string name="acabar">acabar</string>
    <string name="subtitle_perfil">Aquest es el teu perfil</string>
    <string name="title_validar">Validar hores</string>
    <string name="recuperar_contrasenya">Recuperar contrasenya?</string>
    <string name="total">Total</string>
    <string name="sortida">Sortida</string>
    <string name="entrada">Entrada</string>
    <string name="data">Data</string>
    <string name="estat">Estat</string>
    <string name="email_perfil">EMAIL</string>
    <string name="nom_perfil">NOM</string>
    <string name="cognom_perfil">COGNOM</string>
    <string name="telefon_perfil">TELEFON</string>
    <string name="rol_perfil">ROL</string>
    <string name="spn_title">Rol</string>
    <string name="horesMensuals_perfil">HORES MENSUALS</string>
    <string name="tots" translatable="false">Tots</string>
    <string name="dia">AVUI</string>
    <string name="setmana">ULTIMA SETMANA</string>
    <string name="mes">ULTIM MES</string>
    <string name="any">ULTIM ANY</string>
    <string name="personalitzat">PERSONALITZADA</string>
    <string name="mesActual">MES ACTUAL</string>
    <string name="diesSetmana_perfil">DIES SETMANA</string>
    <string name="iniciarJornadaStr">Llisca per entrar</string>
    <string name="acabarJornadaStr">Llisca per sortir</string>
    <string name="recordatoriFicharEntrada">Recorda fichar al entrar a treballar</string>
    <string name="recordatoriFicharSortida">Recorda marcar la sortida quan pleguis</string>
    <string-array name="dlangs">
        <item>treballador</item>
        <item>admin</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empresa_perfil">EMPRESA</string>
    <string name="no_tens_cap_registre_horari_encara">NO TENS CAP REGISTRE HORARI ENCARA</string>
    <string name="mensuals">MENSUALS</string>
    <string name="treballades">TREBALLADES</string>
    <string name="balan">BALANÇ</string>
    <string name="guardar">Guardar</string>
    <string name="string_guardar">GUARDAR</string>
</resources>