<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.piazza.controladores.admin.fragments.alta.AltaAdminReport">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="15dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="14dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="10dp"
                            android:text="@string/email_perfil"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/edit_text_bg"
                            android:ems="14"
                            android:inputType="textEmailAddress"
                            android:singleLine="false"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="10dp"
                            android:text="@string/nom_perfil"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/nom"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/edit_text_bg"
                            android:ems="14"
                            android:inputType="textPersonName"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="10dp"
                            android:text="@string/cognom_perfil"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/cognom"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/edit_text_bg"
                            android:ems="14"
                            android:inputType="textPersonName"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="10dp"
                            android:text="@string/telefon_perfil"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/telefon"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/edit_text_bg"
                            android:ems="14"
                            android:inputType="number"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/txtViewEmpresa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="10dp"
                            android:text="@string/empresa_perfil"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/empresa"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/edit_text_bg"
                            android:ems="14"
                            android:inputType="textShortMessage"
                            tools:ignore="SpeakableTextPresentCheck" />

                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <Button
            android:id="@+id/alta"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/login_btn"
            android:text="@string/alta" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>