<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.TestAuth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.piazza.controladores.employee.EmployeeActivity">

    <TextView
        android:id="@+id/benvingudaIntoduirHores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="!Hola, Toni!"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:animateLayoutChanges="true"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="25dp"
                    android:paddingBottom="25dp"
                    android:text="TextView" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/introduirHoresLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="75dp"
            android:background="?dividerColor" />

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/iniciarTextView"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:text="@string/emptyTime"
                android:textAlignment="gravity"
                android:textSize="50sp" />

            <Space
                android:layout_width="75dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/acabarTextView"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:text="@string/emptyTime"
                android:textAlignment="center"
                android:textSize="50sp"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?dividerColor" />

        <androidx.legacy.widget.Space

            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/iniciarJornada"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/start_effect"
                android:enabled="true"
                android:text="@string/iniciar"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/acabarJornada"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/end_effect"
                android:enabled="false"
                android:text="@string/acabar"
                android:textColor="#000000"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/resultat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/emptyTime"
            android:textSize="34sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="Recorda fichar al entrar a treballar"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/benvingudaIntoduirHores" />


</androidx.constraintlayout.widget.ConstraintLayout>